chore: fix inconsistencies
